Create scheduleHomeVisit api
