# src/utils/validation.ts
@@ -19,6 +19,10 @@ const objectIDSchema = Joi.string().length(24).hex()
 const residenceTypeSchema = Joi.string().valid(...Object.values(ResidenceType))
 const statusSchema = Joi.string().valid(...Object.values(Status))
 
+const today = new Date()
+const weekFromNow = new Date()
+weekFromNow.setDate(weekFromNow.getDate() + 7)
+
 export const signUpValidation = (data: any): Joi.ValidationResult =>
   Joi.object({
     name: nameSchema.required(),
@@ -149,4 +153,10 @@ export const updateApplicationStatusValidation = (
   Joi.object({
     id: objectIDSchema.required(),
     status: statusSchema.required()
+  }).validate(data)
+
+export const scheduleHomeVisitValidation = (data: any): Joi.ValidationResult =>
+  Joi.object({
+    id: objectIDSchema.required(),
+    visitDate: Joi.date().greater(today).less(weekFromNow).required()
   }).validate(data)
